# choose-rich

client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx  Layout.tsx  index.css  main.tsx
client/src/api/: client.ts  config.ts  index.ts  types.ts  wagmi.ts
client/src/api/apex/: index.ts  service.ts  types.ts
client/src/api/balances/: index.ts  service.ts  types.ts
client/src/api/mines/: api.ts  index.ts  service.ts  types.ts
client/src/api/wallet/: index.ts  (+2 more)
client/src/components/: Navbar.tsx  Reel.tsx  SidebarWrapper.tsx
client/src/constants/: bug.json  constants.ts  flowers.json
client/src/hooks/: useApexGame.ts  useBalances.ts  useMinesGame.ts  usePrivyWallet.ts
client/src/pages/: Apex.tsx  Mines.tsx
client/src/store/: balanceStore.ts  viewPortStore.tsx
client/src/utils/: ViewportListner.ts  utils.ts
contracts/: hardhat.config.js
contracts/contracts/: BugsNumberGenerator.sol  GenerateNumber.sol
contracts/ignition/modules/: GenerateNumber.ts
random-verifiable-server/: Dockerfile  README.md  bugs-number-generator-abi.js  contract-abi.js  package-lock.json  package.json  server.js
server/: API_DOCUMENTATION.md  Cargo.toml  DEPOSIT_MONITORING.md  Dockerfile  README.md  example_usage.md
server/src/: main.rs  primitives.rs  server.rs
server/src/apex/: apex.rs  mod.rs
server/src/auth/: middleware.rs  mod.rs  router.rs
server/src/deposit_monitor/: mod.rs  monitor.rs  tests.rs  types.rs
server/src/mines/: mod.rs  router.rs
server/src/store/: db_store.rs  mod.rs
server/src/wallet/: mod.rs  router.rs  wallet.rs
(+5 files in other folders)
